--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@discordjs/rest": "^1.1.0",
     "discord-api-types": "^0.37.5",
-    "discord.js": "^14.3.0"
+    "discord.js": "^14.3.0",
+    "md5": "^2.3.0"
   }
 }
