--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bot.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node bot.ts"
+    "start": "ts-node ./src/bot.ts"
   },
   "author": "",
   "license": "ISC",
