--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/rest": "^1.1.0",
     "discord-api-types": "^0.37.5",
     "discord.js": "^14.3.0",
+    "dotenv": "^16.0.2",
     "md5": "^2.3.0"
   }
 }
