--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mafia-bot",
   "version": "1.0.5",
   "description": "",
-  "main": "bot.ts",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node ./src/bot.ts"
+    "start": "ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
