--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mafia-bot",
-  "version": "1.0.5",
+  "version": "2.0.1",
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nyc ./node_modules/.bin/_mocha 'test/script.unit.test.ts'",
     "start": "ts-node src/index.ts",
     "register": "ts-node src/deploy-commands.ts"
   },
@@ -18,5 +18,13 @@
     "md5": "^2.3.0",
     "mysql2": "^2.3.3",
     "typeorm": "^0.3.10"
+  },
+  "devDependencies": {
+    "@testdeck/mocha": "^0.3.2",
+    "@types/chai": "^4.3.4",
+    "chai": "^4.3.7",
+    "mocha": "^10.1.0",
+    "nyc": "^15.1.0",
+    "ts-node": "^10.9.1"
   }
 }
