--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "nyc ./node_modules/.bin/_mocha 'test/script.unit.test.ts'",
     "start": "ts-node src/index.ts",
-    "register": "ts-node src/deploy-commands.ts"
+    "register": "ts-node src/deploy-commands.ts",
+    "notifications": "ts-node src/notifications.ts"
   },
   "author": "",
   "license": "ISC",
