--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.2",
     "md5": "^2.3.0",
     "mysql2": "^2.3.3",
+    "patreon": "^0.4.1",
     "typeorm": "^0.3.10",
     "valid-url": "^1.0.9"
   },
