--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "jsx": "react-jsx",
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "outDir": "dist"
   },
     "include": [
       "./src/*"
