--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "ts-node src/index.ts",
     "register": "ts-node src/deploy-commands.ts",
     "notifications": "ts-node src/notifications.ts",
-    "build": "tsc src/index.ts"
+    "build": "tsc --project tsconfig.json"
   },
   "author": "",
   "license": "ISC",
