--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "register": "ts-node src/deploy-commands.ts",
     "notifications": "ts-node src/notifications.ts",
     "build": "tsc --project tsconfig.json",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "pull": "git pull origin master"
   },
   "author": "",
   "license": "ISC",
