--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mafia-bot",
-  "version": "2.0.2",
+  "version": "2.0.0(alpha)",
   "description": "",
   "main": "index.ts",
   "scripts": {
