--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node dist/index.js",
     "pull": "git pull origin master"
   },
-  "author": "",
+  "author": "Pazzann",
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^1.1.0",
